Added random draw, and changing deck functionality

--- a/FlashCards3/FlashCards3.vcxproj
+++ b/FlashCards3/FlashCards3.vcxproj
@@ -148,9 +148,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Card.h" />
+    <ClInclude Include="Random.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="defaultcards.json" />
+    <None Include="defaultcards2.json" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
