--- a/FlashCards3/FlashCards3.vcxproj.filters
+++ b/FlashCards3/FlashCards3.vcxproj.filters
@@ -26,9 +26,15 @@
     <ClInclude Include="Card.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Random.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="defaultcards.json">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="defaultcards2.json">
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
